RESOLVED FIXED158718
SVG elements don't blend correctly into HTML
https://bugs.webkit.org/show_bug.cgi?id=158718
Summary SVG elements don't blend correctly into HTML
Dean Jackson
Reported 2016-06-13 19:36:04 PDT
An SVG element that does not have a background will not blend into its parent (HTML) correctly.
Attachments
Patch (4.32 KB, patch)
2016-06-13 19:40 PDT, Dean Jackson
graouts: review+
Radar WebKit Bug Importer
Comment 1 2016-06-13 19:37:12 PDT
Dean Jackson
Comment 2 2016-06-13 19:40:57 PDT
Dean Jackson
Comment 3 2016-06-13 20:03:56 PDT
Note You need to log in before you can comment on or make changes to this bug.