SVG elements don't blend correctly into HTML https://bugs.webkit.org/show_bug.cgi?id=158718 <rdar://problem/26782004>

Reviewed by Antoine Quint.

Source/WebCore:

We were not creating any transparency layers for the root SVG nodes.
This is ok if the SVG is the root document, because it is the backdrop.
However, if it is inline SVG, it needs to apply the operation in
order to composite into the document.

Test: svg/css/mix-blend-mode-with-inline-svg.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::beginTransparencyLayers):

LayoutTests:

* svg/css/mix-blend-mode-with-inline-svg-expected.html: Added.
* svg/css/mix-blend-mode-with-inline-svg.html: Added.

Canonical link: https://commits.webkit.org/176801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202022 268f45cc-cd09-0410-ab3c-d52691b4dbfc